fix the wrapping problem of a single line code

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,11 @@
 .manTransparent{background-color: rgba(0, 0, 0, 0);}
 .autoWidth{width:95%;}
  
+code.highlighter-rouge {
+    word-break: break-word;
+    white-space: normal;
+}
+
 ::-webkit-scrollbar  
 {  
     width: 8px;  
